# plug-and-trust-demos

./: CMakeLists.txt
scripts/: native.cmake
se05x_GetInfo/: CMakeLists.txt  se05x_GetInfo.c
