#
# Copyright 2019,2020 NXP
# SPDX-License-Identifier: Apache-2.0
#
#

PROJECT(se05x_GetInfo)

FILE(
    GLOB
    files
    *.c
)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${KSDK_STARTUP_FILE} ${files}
)

TARGET_COMPILE_DEFINITIONS(
    ${PROJECT_NAME}
    PRIVATE SIMW_DEMO_ENABLE__DEMO_SE05X_GETINFO
)

TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PRIVATE ${SIMW_TOP_DIR}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ex_common
    se05x
    a7x_utils
    smCom
    mwlog
    SSS_APIs
)

CREATE_BINARY(${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
